# Sequences

./: CMakeLists.txt  CTestConfig.cmake  README.md
CMake/: SequencesConfig.cmake.in
CropVolumeSequence/: CMakeLists.txt  CropVolumeSequence.py
DicomVolumeSequencePlugin/: CMakeLists.txt  DicomVolumeSequencePlugin.py
MetafileImporter/: CMakeLists.txt  qSlicerMetafileImporterIO.cxx  qSlicerMetafileImporterIO.h  qSlicerMetafileImporterModule.cxx  qSlicerMetafileImporterModule.h  qSlicerMetafileImporterModuleWidget.cxx  qSlicerMetafileReader.cxx  qSlicerSequencesReader.cxx  qSlicerSequencesReader.h  qSlicerVolumeSequenceImporterIO.cxx  qSlicerVolumeSequenceImporterIO.h  qSlicerVolumeSequenceReader.cxx  qSlicerVolumeSequenceReader.h
MetafileImporter/Logic/: CMakeLists.txt  (+2 more)
SequenceBrowser/: CMakeLists.txt  qSlicerSequenceBrowserModule.cxx  qSlicerSequenceBrowserModule.h  qSlicerSequenceBrowserModuleWidget.cxx  qSlicerSequenceBrowserModuleWidget.h
SequenceLabelStatistics/: CMakeLists.txt  SequenceLabelStatistics.py
SequenceRegistration/: SequenceRegistration.py
SequenceResample/: SequenceResample.py
SequenceSampleData/: CMakeLists.txt  SequenceSampleData.py
Sequences/: CMakeLists.txt  qSlicerSequencesModule.cxx  qSlicerSequencesModule.h  qSlicerSequencesModuleWidget.cxx  qSlicerSequencesModuleWidget.h
src/: CMakeLists.txt
src/MetafileImporter/: CMakeLists.txt  qSlicerMetafileImporterIO.cxx  qSlicerMetafileImporterModule.cxx  qSlicerMetafileImporterModule.h  qSlicerMetafileImporterModuleWidget.cxx
src/MetafileImporter/Logic/: CMakeLists.txt  vtkSlicerMetafileImporterLogic.cxx  vtkSlicerMetafileImporterLogic.h
src/MetafileImporter/Resources/UI/: qSlicerMetafileImporterFooBarWidget.ui  qSlicerMetafileImporterModuleWidget.ui
src/MetafileImporter/Widgets/: qSlicerMetafileImporterFooBarWidget.cxx  qSlicerMetafileImporterFooBarWidget.h
src/MultiDimension/: CMakeLists.txt  qSlicerMultiDimensionModule.cxx  qSlicerMultiDimensionModule.h  qSlicerMultiDimensionModuleWidget.cxx  qSlicerMultiDimensionModuleWidget.h
src/MultiDimension/Logic/: vtkSlicerMultiDimensionLogic.cxx  vtkSlicerMultiDimensionLogic.h
src/MultiDimension/Resources/: qSlicerMultiDimensionModule.qrc
src/MultiDimension/Resources/UI/: qSlicerMultiDimensionFooBarWidget.ui  qSlicerMultiDimensionModuleWidget.ui
src/MultiDimension/Widgets/: qSlicerMultiDimensionFooBarWidget.cxx  qSlicerMultiDimensionFooBarWidget.h
src/MultiDimensionBrowser/: CMakeLists.txt  qSlicerMultiDimensionBrowserModule.cxx  qSlicerMultiDimensionBrowserModule.h  qSlicerMultiDimensionBrowserModuleWidget.cxx  qSlicerMultiDimensionBrowserModuleWidget.h
src/MultiDimensionBrowser/Logic/: CMakeLists.txt  vtkMRMLMultiDimensionBrowserNode.cxx  vtkMRMLMultiDimensionBrowserNode.h  vtkSlicerMultiDimensionBrowserLogic.cxx  vtkSlicerMultiDimensionBrowserLogic.h
src/MultiDimensionBrowser/Resources/: qSlicerMultiDimensionBrowserModule.qrc
src/MultiDimensionBrowser/Resources/UI/: qSlicerMultiDimensionBrowserFooBarWidget.ui  qSlicerMultiDimensionBrowserModuleWidget.ui
src/MultiDimensionBrowser/Widgets/: qSlicerMultiDimensionBrowserFooBarWidget.cxx  qSlicerMultiDimensionBrowserFooBarWidget.h
src/MultiDimensionComposer/: CMakeLists.txt  MultiDimensionComposer.py
src/MultiDimensionExplorer/: CMakeLists.txt  MultiDimensionExplorer.py
src/MultidimData/: CMakeLists.txt  qSlicerMultidimDataModule.cxx  qSlicerMultidimDataModule.h  qSlicerMultidimDataModuleWidget.cxx  qSlicerMultidimDataModuleWidget.h
src/MultidimData/Logic/: vtkMRMLMultidimDataNode.cxx  vtkMRMLMultidimDataNode.h  vtkSlicerMultidimDataLogic.cxx  vtkSlicerMultidimDataLogic.h
src/MultidimData/Resources/: qSlicerMultidimDataModule.qrc
src/MultidimData/Resources/UI/: qSlicerMultidimDataFooBarWidget.ui  qSlicerMultidimDataModuleWidget.ui
src/MultidimData/Widgets/: qSlicerMultidimDataFooBarWidget.cxx  qSlicerMultidimDataFooBarWidget.h
src/MultidimDataBrowser/: CMakeLists.txt  qSlicerMultidimDataBrowserModule.cxx  qSlicerMultidimDataBrowserModule.h  qSlicerMultidimDataBrowserModuleWidget.cxx  qSlicerMultidimDataBrowserModuleWidget.h
src/MultidimDataBrowser/Logic/: CMakeLists.txt  vtkMRMLMultidimDataBrowserNode.cxx  vtkMRMLMultidimDataBrowserNode.h  vtkSlicerMultidimDataBrowserLogic.cxx  vtkSlicerMultidimDataBrowserLogic.h
src/MultidimDataBrowser/Resources/: qSlicerMultidimDataBrowserModule.qrc
src/MultidimDataBrowser/Resources/UI/: qSlicerMultidimDataBrowserFooBarWidget.ui  qSlicerMultidimDataBrowserModuleWidget.ui
src/MultidimDataBrowser/Widgets/: qSlicerMultidimDataBrowserFooBarWidget.cxx  qSlicerMultidimDataBrowserFooBarWidget.h
src/SequenceBrowser/: CMakeLists.txt  qSlicerSequenceBrowserModule.cxx  qSlicerSequenceBrowserModule.h  qSlicerSequenceBrowserModuleWidget.cxx  qSlicerSequenceBrowserModuleWidget.h
src/SequenceBrowser/Logic/: CMakeLists.txt  vtkMRMLSequenceBrowserNode.cxx  vtkMRMLSequenceBrowserNode.h  vtkSlicerSequenceBrowserLogic.cxx  vtkSlicerSequenceBrowserLogic.h
src/SequenceBrowser/MRML/: CMakeLists.txt
src/SequenceBrowser/Resources/: qSlicerSequenceBrowserModule.qrc
src/SequenceBrowser/Resources/UI/: qSlicerSequenceBrowserFooBarWidget.ui  qSlicerSequenceBrowserModuleWidget.ui
src/SequenceBrowser/Widgets/: qSlicerSequenceBrowserFooBarWidget.h
src/SequenceLabelStatistics/: SequenceLabelStatistics.py
src/SequenceRegistration/: CMakeLists.txt  SequenceRegistration.py
src/SequenceRegistration/Testing/Python/: CMakeLists.txt
src/SequenceResample/: CMakeLists.txt  SequenceResample.py
src/Sequences/: CMakeLists.txt  qSlicerSequencesModule.cxx  qSlicerSequencesModuleWidget.cxx  qSlicerSequencesModuleWidget.h
src/Sequences/Logic/: CMakeLists.txt  vtkMRMLSequenceNode.cxx  vtkMRMLSequenceNode.h  vtkMRMLSequenceStorageNode.cxx  vtkMRMLSequenceStorageNode.h  vtkSlicerSequencesLogic.cxx
src/Sequences/MRML/: vtkMRMLSequenceNode.cxx  vtkMRMLSequenceStorageNode.cxx
src/Sequences/Resources/: qSlicerSequencesModule.qrc
src/Sequences/Resources/UI/: qSlicerSequencesModuleWidget.ui
src/Sequences/Widgets/: qSlicerSequencesFooBarWidget.cxx
(+57 files in other folders)
